[tool.poetry]
name = "todoist-ical-py"
version = "0.1.0"
description = "ICal Generator for Todoist"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
icalendar = "^4.0.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
