[tool.poetry]
name = "todoist-ics-py"
version = "0.1.0"
description = "ICal Generator for Todoist"
authors = ["Dmitrij Drandarov <dmitrij.drandarov@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.7"
icalendar = "^4.0.6"
todoist-python = "^8.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
